bat.bool1.diff21.Diff21.scala.error
Compilation error:
Diff21:3: error: not found: value a
  a=21-n
  ^Diff21:5: error: not found: value a
    return(a)
           ^Diff21:7: error: not found: value a
    return(Math.abs(2*a))
                      ^