bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
  a=21-n
  if (n<=21){
    return(a)
  }else{
    return(Math.abs(2*a))
  }
}